# rules_experimental_android

./: .bazelrc  WORKSPACE  defs.bzl
examples/BasicSample/: BUILD.bazel
examples/BasicSample/app/src/androidTest/java/com/example/android/testing/espresso/BasicSample/: ChangeTextBehaviorTest.java
examples/BasicSample/app/src/main/: AppManifest.xml
examples/CustomMatcherSample/: BUILD.bazel
examples/CustomMatcherSample/app/src/main/: AppManifest.xml
marathon/: Marathonfile.tpl  defs.bzl
